--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,24 +12,6 @@ body {
   color: #001b44;
 }
 
-button {
-    background-color: #001b44;
-    border-radius: 8px;
-    color: #fff;
-    cursor: pointer;
-    font-size: 1.2em;
-    letter-spacing: 0.21px;
-    line-height: 16px;
-    max-width: 255px;
-    padding: 20px 52px;
-    text-align: center;
-    transition-duration: 0.15s;
-    transition-property: background-color;
-    transition-timing-function: linear;
-    margin: 0.6em auto;
-    display: block;
-}
-
 h1 {
   text-align: center;
 }
@@ -70,7 +52,25 @@ section.quizsection {
 
 /* Id Selectors */
 
-#userinitialsblock {
+#startquiz {
+  background-color: #001b44;
+  border-radius: 8px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1.2em;
+  letter-spacing: 0.21px;
+  line-height: 16px;
+  max-width: 255px;
+  padding: 20px 52px;
+  text-align: center;
+  transition-duration: 0.15s;
+  transition-property: background-color;
+  transition-timing-function: linear;
+  margin: 0.6em auto;
+  /* display: block; */
+}
+
+#userinitialsblock, #highscoresection {
   margin: 5;
   display: none;
 }
